...
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="Rule name"
		style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/rule_name_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text" />

	</com.google.android.material.textfield.TextInputLayout>

...
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:hint="Rule type"
		style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

		<AutoCompleteTextView
			android:id="@+id/rule_type_spinner"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="none" />

	</com.google.android.material.textfield.TextInputLayout>

...
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="Enabled"
			android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

		<Switch
			android:id="@+id/is_enabled_switch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	</LinearLayout>

</LinearLayout>
...
